add meaningful title for my resume

--- a/project1/index.html
+++ b/project1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Vincent Huang</title>
+    <title>Resume For Vincent Huang</title>
     <meta charset="utf-8"/>
   <body>
   </body>
