--- a/project1/index.html
+++ b/project1/index.html
@@ -3,7 +3,25 @@
 <head>
     <title>Resume For Vincent Huang</title>
     <meta charset="utf-8"/>
-  <body>
-  </body>
 </head>
+  <body>
+    <h1>Site Title</h1>
+    <h2>Page Title</h2>
+    <h3>Heading</h3>
+    <h4>Sub-Heading</h3>
+      <p>
+        Any phrases or sentences that can stand by itself, AND:
+        There can be no other better tag to mark up its content.
+      </p>
+      <ol>
+        <li>Git add<li>
+          <li>git commit<li>
+            <li>git push<li>
+      </ol>
+      <ul>
+        <li>Carp</li>
+        <li>Bass</li>
+        <li>Huskie</li>
+      </ul>
+  </body>
 </html>
