adjusted section title to h2 and rearragned order list around

--- a/project1/resume/index.html
+++ b/project1/resume/index.html
@@ -7,8 +7,9 @@
 </head>
 <main>
     <h1>Xionghui's Resume</h1>
+  <body>
     <section>
-      <h1>Basic Information</h1>
+      <h2>Basic Information</h2>
       <ol>
         <li>Name: Xionghui"Vincent" Huang</li>
         <li>Phone:312.451.1886</li>
@@ -30,7 +31,7 @@
 
 
   <section>
-    <h1>Work Experience</h1>
+    <h2>Work Experience</h2>
     <ol>
       <li>Rush University Medical Center: 9/2016-6/2017</li>
     </ol>
@@ -43,18 +44,18 @@
 
 
   <section>
-    <h1>Volunteer Experience</h1>
+    <h2>Volunteer Experience</h2>
     <ol>
       <li>Chicago Food Depository: 06/2016</li>
+    </ol>
       <ul>
       <li>Help package food to serve people in need.</li>
       </ul>
-    </ol>
   </section>
 
 
   <section>
-    <h1>Skill</h1>
+    <h2>Skill</h2>
     <ol>
       <li>Computer programming languages:</li>
     </ol>
@@ -64,6 +65,6 @@
       </ul>
   </section>
 
-
+</body>
 </main>
 </html>
