added new html file and rearranged index file

--- a/project1/resume/resume.html
+++ b/project1/resume/resume.html
@@ -4,8 +4,11 @@
   <title>Resume of Vincent Huang</title>
   <meta charset="utf-8"/>
 </head>
-<main>
   <body>
+    <header>
+    </header>
+
+    <main>
     <h1>Xionghui's Resume</h1>
     <section>
       <h2>Basic Information</h2>
@@ -33,6 +36,7 @@
     <h2>Work Experience</h2>
     <ol>
       <li>Rush University Medical Center: 9/2016-6/2017</li>
+      <li>Customer Support Technicion</li>
     </ol>
         <ul>
           <li>Work with team to complete a customer tickets.</li>
@@ -56,12 +60,14 @@
   <section>
     <h2>Skill</h2>
     <ol>
-      <li>Computer programming languages:</li>
+      <li>Computer programming languages:
+        <ul>
+          <li>Java</li>
+          <li>C++</li>
+        </ul>
+      </li>
+      <li>Cisco ITE certified</li>
     </ol>
-      <ul>
-        <li>Java</li>
-        <li>C++</li>
-      </ul>
   </section>
 
 </body>
