added links to other pages

--- a/project1/resume/resume.html
+++ b/project1/resume/resume.html
@@ -6,6 +6,12 @@
 </head>
   <body>
     <header>
+      <nav>
+        <ul>
+          <li><a href="/home/vincent/ITM361/project1/project1/aboutme/aboutme.html">About me</a></li>
+          <li><a href="/home/vincent/ITM361/project1/project1/my-dog/dog.html">My Dog</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
